# agent-identity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.zh.md  pyproject.toml
agent-id-cli/: README.md  pyproject.toml
agent-id-cli/agent_id_cli/: config.py  crypto.py  main.py
agent-id-cli/agent_id_cli/commands/: agent.py  init.py
agent-id-cli/tests/: test_cli.py
agent-id-client-sdk/: README.md  README.zh.md  pyproject.toml
agent-id-client-sdk/agent_id_client_sdk/: __init__.py  client.py  identity.py  manage.py  profile.py
agent-id-client-sdk/agent_id_client_sdk/providers/: __init__.py  base.py  modelscope.py  provision.py
agent-id-client-sdk/tests/: test_client.py  test_dpop_signing.py  test_from_zip.py  test_identity.py  test_idp_url_derivation.py  test_modelscope_live.py  test_providers_modelscope.py
agent-id-sdk/: README.md  pyproject.toml
agent-id-sdk/agent_id_sdk/: __init__.py  client.py  discovery.py  identity.py  manage.py
agent-id-sdk/tests/: test_from_zip.py  test_identity.py  test_idp_url_derivation.py
agent-id-service-sdk/: README.md  README.zh.md  pyproject.toml  pyrightconfig.json
agent-id-service-sdk/agent_id_service_sdk/: __init__.py  approval_policy.py  dpop.py  envelope.py  errors.py  events.py  keygen.py  manifest.py  manifest_signing.py  namespace_ownership.py  reporter.py  verifier.py
agent-id-service-sdk/tests/: test_agent_token_version.py  test_approval_policy.py  test_dpop.py  test_dpop_integration.py  test_envelope.py  test_events.py  test_keygen_cli.py  test_manifest.py  test_manifest_signing.py  test_namespace_ownership.py  test_raw_jwt_forwarding.py  test_verifier.py
agent-id-verify/: README.md  pyproject.toml
agent-id-verify/agent_id_verify/: __init__.py  errors.py
agent-id-verify/tests/: test_verifier.py
aip-cli/: pyproject.toml
aip-cli/aip_cli/: config.py  crypto.py  main.py
aip-cli/aip_cli/commands/: agent.py  init.py
aip-cli/tests/: test_cli.py
aip-identity-cli/: README.md  pyproject.toml
aip-identity-cli/aip_identity_cli/: config.py  crypto.py  main.py
aip-identity-cli/aip_identity_cli/commands/: agent.py  init.py
aip-identity-cli/tests/: test_cli.py
aip-identity-sdk/: README.md  pyproject.toml
aip-identity-sdk/aip_identity_sdk/: identity.py  manage.py
aip-identity-sdk/tests/: test_from_zip.py  test_identity.py  test_idp_url_derivation.py
aip-identity-verify/: README.md  pyproject.toml
aip-identity-verify/aip_identity_verify/: __init__.py  events.py  reporter.py  verifier.py
aip-identity-verify/tests/: test_events.py  test_verifier.py
aip-idp/: aip_idp.db  idp_signing_key.pem  pyproject.toml
aip-idp/aip_idp/: config.py  main.py
aip-idp/aip_idp/models/: database.py
aip-idp/aip_idp/routes/: agents.py  auth.py  token.py
aip-idp/tests/: test_flow.py
aip-sdk/: pyproject.toml
aip-sdk/aip_sdk/: __init__.py  client.py  identity.py  manage.py
aip-sdk/tests/: test_identity.py
aip-verify/: pyproject.toml
aip-verify/aip_verify/: verifier.py
aip-verify/tests/: test_verifier.py
design/: 2026-03-25-agent-identity-protocol.en.md  2026-03-25-agent-identity-protocol.zh.md  2026-03-25-agentid.en.md  2026-03-25-agentid.zh.md  2026-03-31-idp-implementation-guide.zh.md  2026-04-02-copaw-integration.md  2026-04-02-qwenpaw-integration.md  2026-04-23-approval-scenarios.en.md  2026-04-23-approval-scenarios.zh.md  2026-04-29-mcp-server-agentid-sketch.md  2026-04-29-mcp-server-aip-sketch.md  2026-04-30-agentid-rename-plan.md  2026-05-01-deferred-work.md  2026-05-04-activity-discovery.en.md  2026-05-20-hub-trust-and-dpop.en.md  Commercialization.md
docs/: agentid-client-sdk.md  agentid-client-sdk.zh.md  agentid-service-sdk.md  agentid-service-sdk.zh.md  hub-integration.md  ida-integration.md  ida-integration.zh.md  modelscope-alignment.md  modelscope-deliverables.md
examples/: README.md
examples/demo-agent/: agent.py
examples/demo-agent/.claude/: settings.local.json
examples/demo-hub/: approve.py  hub.py
examples/modelscope-quickstart/: README.md  quickstart.py
ref-idp/: pyproject.toml
ref-idp/ref_idp/: config.py  main.py
ref-idp/ref_idp/crypto/: jwt.py  keys.py
ref-idp/ref_idp/models/: database.py
ref-idp/ref_idp/routes/: agents.py  auth.py  discovery.py  hub_apps.py  token.py
ref-idp/tests/: test_flow.py  test_v05_claims.py
