[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-id-cli"
version = "0.1.0"
description = "CLI tool for managing agent identities (AIP)"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "CoPaw", email = "dev@copaw.ai"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "agent-id-sdk>=0.1.0",
]

[project.scripts]
aip = "agent_id_cli.main:app"

[project.urls]
Homepage = "https://github.com/copaw/agent-identity"
Documentation = "https://github.com/copaw/agent-identity"
Repository = "https://github.com/copaw/agent-identity"
