[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-id-client-sdk"
version = "0.4.0"
description = "AgentID — Client SDK for ModelScope Agent IdP"
license = "Apache-2.0"
authors = [{name = "Tongyi Lab", email = "yilei.z@alibaba-inc.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25",
    "cryptography>=41.0",
    "pyjwt[crypto]>=2.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/agentscope-ai/agent-identity"
Documentation = "https://github.com/agentscope-ai/agent-identity"
Repository = "https://github.com/agentscope-ai/agent-identity"
