[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-id-verify"
version = "0.1.0"
description = "Agent Identity Protocol - Hub Verification Library"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "CoPaw", email = "dev@copaw.ai"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25",
    "cryptography>=41.0",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/copaw/agent-identity"
Documentation = "https://github.com/copaw/agent-identity"
Repository = "https://github.com/copaw/agent-identity"
