[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aip-cli"
version = "0.1.0"
description = "CLI tool for managing agent identities (AIP)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "aip-sdk>=0.1.0",
]

[project.scripts]
aip = "aip_cli.main:app"
