[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aip-identity-cli"
version = "0.1.3"
description = "CLI tool for managing agent identities (AIP)"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Tongyi Lab", email = "yilei.z@alibaba-inc.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "aip-identity-sdk>=0.1.0",
]

[project.scripts]
aip = "aip_identity_cli.main:app"

[project.urls]
Homepage = "https://github.com/agentscope-ai/agent-identity"
Documentation = "https://github.com/agentscope-ai/agent-identity"
Repository = "https://github.com/agentscope-ai/agent-identity"
