[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aip-idp"
version = "0.1.0"
description = "AIP Identity Provider - Reference Implementation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
